opam-version: "2.0"
version: "v0.17.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/streamable"
bug-reports: "https://github.com/janestreet/streamable/issues"
dev-repo: "git+https://github.com/janestreet/streamable.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/streamable/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"            {>= "5.1.0"}
  "async_kernel"     {>= "v0.17" & < "v0.18"}
  "async_rpc_kernel" {>= "v0.17" & < "v0.18"}
  "base"             {>= "v0.17" & < "v0.18"}
  "core"             {>= "v0.17" & < "v0.18"}
  "core_kernel"      {>= "v0.17" & < "v0.18"}
  "ppx_jane"         {>= "v0.17" & < "v0.18"}
  "dune"             {>= "3.11.0"}
  "ppxlib"           {>= "0.28.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A collection of types suitable for incremental serialization."
description: "
A collection of types suitable for incremental serialization.
"
