opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/streamable"
bug-reports: "https://github.com/janestreet/streamable/issues"
dev-repo: "git+https://github.com/janestreet/streamable.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/streamable/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async_kernel"
  "async_rpc_kernel"
  "base"
  "bin_prot"
  "core"
  "core_kernel"
  "ppx_jane"
  "ppxlib_jane"
  "dune"             {>= "3.17.0"}
  "ppxlib"           {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A collection of types suitable for incremental serialization."
description: "
A collection of types suitable for incremental serialization.
"
